# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =
== 1.8 ==
  * Update GEMINI integration (#623)
  * gemini.php is issuing PHP warnings (#619)
  * Modify the "Join the project" default email text (#616)
  * Fix email bounces in do-handle-project-request.php (#611)

== 1.7.1 ==
  * Add `do-handle-project-request.php` to Makefile.am (#609)
  * Month in expiration date should be incremented by one (#610)

== 1.7 ==
  * Added an HTML index page for clearinghouse hosts (#595)
  * Removed obsolete create_standard_services.sh script (#587)
  * Add a "delete" ssh key button to Profile page (#542)
  * Call setClientCert with an array instead of a string (#592)
  * Add GEMINI button(s) to home page (#602)
  * Add project info to GEMINI data (#585)
  * Add ssh keys to GEMINI data (#604)
  * Update OpenID for portal.geni.net (#594)
  * List of project in download omni bundle should only include active projects (#554)
  * On new project page, note showing that name of lead is public (#469)
  * Have raw manifest appear in a separate window/tab/popup (#520)
  * New project lead email had broken link (#593)
  * New project lead email sometimes had blank for name (#521)
  * Add timestamps to pgch logs (#398)
  * Script to delete an outside cert (#601)
  * Update user certs script dies if a user did not enable the portal (#606)
  * Revamped Slice and Sliver renewal (#603, #126)
  * Add a note that slice member keys/accounts will only be added via the native portal resource reservation mechanism (#596)

== 1.6.2 ==
  * Handle EPPNs as case-insensitive strings (#597)

== 1.6.1 ==
  * Import databascript was losing non member log messages (#589)

== 1.6 ==
  * Add more bin scripts to install (#569)
  * portal_enable_abac controls all use of ABAC - so all disabled now (#556)
  * update_user_certs script updates the ma_outside_cert table for DB transition (#564)
  * Add missing copyright (#576)